# bookAPI

./: README.md  main.py  pyproject.toml
src/: store.py
src/modules/auth/: manager.py  router.py  schema.py
src/modules/book/: manager.py  router.py  schema.py
tests/: test_api.py
