[tool.poetry]
name = "bookapi"
version = "0.1.0"
description = ""
authors = ["hordunlarmy <hordunlarmy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = {extras = ["email"], version = "^2.12.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
